Fixed overlapping buttons

--- a/src/Main.css
+++ b/src/Main.css
@@ -154,7 +154,7 @@ body {
     background: #04CCFF;
     border: 2px solid #04CCFF;
     border-radius: 8px;
-    margin-left: 40px;
+    margin-left: 50px;
 }
 
 .closebtn:hover {
